samples/_failures_safe/1761258490_29de90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a7a17ec.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_4a7a17ec.c:126:9: error: expected expression at end of input
  126 |         for (int j = 0;
      |         ^~~
./samples/SAFE/__tmp_4a7a17ec.c:126:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4a7a17ec.c:126:9: error: expected declaration or statement at end of input
